Added README.md and Report generation

--- a/notebooks/01_signal_processing.ipynb
+++ b/notebooks/01_signal_processing.ipynb
@@ -2,143 +2,211 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "15e82d07",
+   "execution_count": null,
+   "id": "e29ced60",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Cell 1 Complete: Libraries loaded.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from scipy.fft import fft, fftfreq\n",
-    "from scipy.stats import kurtosis\n",
+    "from scipy.io import loadmat\n",
+    "from scipy.signal import butter, filtfilt, detrend, windows, welch\n",
+    "from scipy.stats import skew, kurtosis\n",
+    "import os\n",
     "\n",
     "# Configuration\n",
-    "FS = 2000       # Sampling Rate (Hz)\n",
-    "DURATION = 2.0  # Duration (seconds)\n",
-    "N = int(FS * DURATION)          \n",
-    "t = np.linspace(0, DURATION, N, endpoint=False) \n",
-    "\n",
-    "print(\"Cell 1 Complete: Libraries loaded.\")"
+    "FS = 12000  # Sampling Frequency"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "428c02bc",
+   "metadata": {},
+   "source": [
+    "## 1. Load Data\n",
+    "We load sample data from the CWRU dataset. Ensure the `.mat` files are in the `../data/` directory."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "f3b6c328",
+   "execution_count": null,
+   "id": "35296968",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Cell 2 Complete: 'normal_signal' and 'faulty_signal' are now defined.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def generate_signal(has_fault=False):\n",
-    "    # Base Signal\n",
-    "    signal = 0.5 * np.sin(2 * np.pi * 50 * t)\n",
-    "    # Noise\n",
-    "    noise = np.random.normal(0, 0.3, N)\n",
-    "    signal += noise\n",
-    "    # Fault\n",
-    "    if has_fault:\n",
-    "        fault_signature = 0.4 * np.sin(2 * np.pi * 120 * t)\n",
-    "        signal += fault_signature\n",
-    "    return signal\n",
+    "def load_data(filename):\n",
+    "    path = os.path.join(\"../data\", filename)\n",
+    "    if not os.path.exists(path):\n",
+    "        print(f\"File not found: {path}\")\n",
+    "        return None\n",
+    "    data = loadmat(path)\n",
+    "    # Find the time series key (usually ends with _DE_time)\n",
+    "    for key in data.keys():\n",
+    "        if key.endswith(\"_DE_time\"):\n",
+    "            return data[key].flatten()\n",
+    "    return None\n",
     "\n",
-    "# This defines the variables your later code needs!\n",
-    "normal_signal = generate_signal(has_fault=False)\n",
-    "faulty_signal = generate_signal(has_fault=True)\n",
+    "# Load samples\n",
+    "normal_sig = load_data(\"97.mat\")\n",
+    "inner_sig = load_data(\"inner_race.mat\")\n",
+    "ball_sig = load_data(\"ball_fault.mat\")\n",
+    "outer_sig = load_data(\"outer_race.mat\")\n",
     "\n",
-    "print(\"Cell 2 Complete: 'normal_signal' and 'faulty_signal' are now defined.\")"
+    "# Slice first 2048 points for visualization\n",
+    "N = 2048\n",
+    "if normal_sig is not None: normal_sig = normal_sig[:N]\n",
+    "if inner_sig is not None: inner_sig = inner_sig[:N]\n",
+    "if ball_sig is not None: ball_sig = ball_sig[:N]\n",
+    "if outer_sig is not None: outer_sig = outer_sig[:N]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "99558c31",
+   "metadata": {},
+   "source": [
+    "## 2. Preprocessing\n",
+    "Raw signals often contain noise and DC offsets. We apply:\n",
+    "- **Low-pass Filter:** Remove high-frequency noise.\n",
+    "- **Detrending:** Remove linear trends.\n",
+    "- **Normalization:** Scale to zero mean and unit variance."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "4b16dc73",
+   "execution_count": null,
+   "id": "57bfea2b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Cell 2A Complete: 'compute_fft' helper defined.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def compute_fft(signal):\n",
-    "    # Compute amplitude spectrum using NumPy's FFT\n",
-    "    Y = np.fft.rfft(signal)\n",
-    "    amps = np.abs(Y)\n",
-    "    freqs = np.fft.rfftfreq(N, d=1.0/FS)\n",
-    "    return freqs, amps\n",
+    "def preprocess_signal(signal):\n",
+    "    # 1. Low-pass filter\n",
+    "    b, a = butter(4, 0.2, btype='low')\n",
+    "    filtered = filtfilt(b, a, signal)\n",
+    "    \n",
+    "    # 2. Detrend\n",
+    "    detrended = detrend(filtered)\n",
+    "    \n",
+    "    # 3. Normalize\n",
+    "    normalized = (detrended - np.mean(detrended)) / np.std(detrended)\n",
+    "    return normalized\n",
     "\n",
-    "print(\"Cell 2A Complete: 'compute_fft' helper defined.\")"
+    "# Apply preprocessing\n",
+    "normal_proc = preprocess_signal(normal_sig) if normal_sig is not None else None\n",
+    "inner_proc = preprocess_signal(inner_sig) if inner_sig is not None else None"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "41d2b880",
+   "metadata": {},
+   "source": [
+    "## 3. Visualization (Time Domain)\n",
+    "Comparing Raw vs Preprocessed signals."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "95542b3b",
+   "execution_count": null,
+   "id": "ec9621eb",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--- DIAGNOSTIC REPORT ---\n",
-      "NORMAL Signal:  RMS=0.469, Kurtosis=-0.450, Peak Freq=50.0 Hz\n",
-      "FAULTY Signal:  RMS=0.538, Kurtosis=-0.391, Peak Freq=50.0 Hz\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from scipy.stats import kurtosis\n",
+    "plt.figure(figsize=(12, 6))\n",
+    "plt.subplot(2, 1, 1)\n",
+    "plt.plot(normal_sig)\n",
+    "plt.title(\"Raw Normal Signal\")\n",
+    "plt.grid(True)\n",
     "\n",
-    "def extract_features(signal, fs):\n",
-    "    features = {}\n",
+    "plt.subplot(2, 1, 2)\n",
+    "plt.plot(normal_proc)\n",
+    "plt.title(\"Preprocessed Normal Signal\")\n",
+    "plt.grid(True)\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6dbe0ff6",
+   "metadata": {},
+   "source": [
+    "## 4. Frequency Domain Analysis (FFT & PSD)\n",
+    "Faults are often easier to detect in the frequency domain."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0bc41e02",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_spectrum(signal, title):\n",
+    "    # FFT\n",
+    "    fft_vals = np.abs(np.fft.rfft(signal))\n",
+    "    freqs = np.fft.rfftfreq(len(signal), d=1/FS)\n",
     "    \n",
-    "    # --- TIME DOMAIN FEATURES ---\n",
-    "    # 1. RMS (Root Mean Square) - The \"Loudness\" of the vibration\n",
-    "    features['rms'] = np.sqrt(np.mean(signal**2))\n",
+    "    # PSD\n",
+    "    f, psd = welch(signal, fs=FS, nperseg=1024)\n",
     "    \n",
-    "    # 2. Kurtosis - The \"Spikiness\" (High kurtosis = sharp impacts like clicks)\n",
-    "    features['kurtosis'] = kurtosis(signal)\n",
+    "    plt.figure(figsize=(12, 5))\n",
     "    \n",
-    "    # 3. Crest Factor - Peak vs. Average (Impact intensity)\n",
-    "    peak = np.max(np.abs(signal))\n",
-    "    features['crest_factor'] = peak / features['rms']\n",
+    "    plt.subplot(1, 2, 1)\n",
+    "    plt.plot(freqs, fft_vals)\n",
+    "    plt.title(f\"{title} - FFT\")\n",
+    "    plt.xlabel(\"Frequency (Hz)\")\n",
+    "    plt.grid(True)\n",
     "    \n",
-    "    # --- FREQUENCY DOMAIN FEATURES ---\n",
-    "    # 4. Dominant Frequency - Where is the energy concentrated?\n",
-    "    # We reuse our FFT logic here\n",
-    "    freqs, amps = compute_fft(signal)\n",
+    "    plt.subplot(1, 2, 2)\n",
+    "    plt.semilogy(f, psd)\n",
+    "    plt.title(f\"{title} - PSD\")\n",
+    "    plt.xlabel(\"Frequency (Hz)\")\n",
+    "    plt.grid(True)\n",
     "    \n",
-    "    # Find the index of the tallest spike\n",
-    "    dominant_index = np.argmax(amps)\n",
-    "    features['peak_freq'] = freqs[dominant_index]\n",
-    "    \n",
-    "    return features\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()\n",
     "\n",
-    "# Test it on our two signals\n",
-    "normal_feats = extract_features(normal_signal, FS)\n",
-    "faulty_feats = extract_features(faulty_signal, FS)\n",
+    "if inner_proc is not None:\n",
+    "    plot_spectrum(inner_proc, \"Inner Race Fault\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dc66f228",
+   "metadata": {},
+   "source": [
+    "## 5. Feature Extraction\n",
+    "We extract statistical features for the Machine Learning model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c9c2b610",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def extract_features(signal):\n",
+    "    feats = {}\n",
+    "    # Time Domain\n",
+    "    feats[\"RMS\"] = np.sqrt(np.mean(signal**2))\n",
+    "    feats[\"Kurtosis\"] = kurtosis(signal)\n",
+    "    feats[\"Skewness\"] = skew(signal)\n",
+    "    feats[\"Peak_to_Peak\"] = np.ptp(signal)\n",
+    "    \n",
+    "    # Frequency Domain\n",
+    "    fft_vals = np.abs(np.fft.rfft(signal))\n",
+    "    freqs = np.fft.rfftfreq(len(signal), 1/FS)\n",
+    "    idx_max = np.argmax(fft_vals)\n",
+    "    feats[\"Dominant_Freq\"] = freqs[idx_max]\n",
+    "    feats[\"Dominant_Amp\"] = fft_vals[idx_max]\n",
+    "    \n",
+    "    return feats\n",
     "\n",
-    "print(\"--- DIAGNOSTIC REPORT ---\")\n",
-    "print(f\"NORMAL Signal:  RMS={normal_feats['rms']:.3f}, Kurtosis={normal_feats['kurtosis']:.3f}, Peak Freq={normal_feats['peak_freq']} Hz\")\n",
-    "print(f\"FAULTY Signal:  RMS={faulty_feats['rms']:.3f}, Kurtosis={faulty_feats['kurtosis']:.3f}, Peak Freq={faulty_feats['peak_freq']} Hz\")"
+    "if inner_proc is not None:\n",
+    "    print(\"Features for Inner Race Fault:\")\n",
+    "    print(extract_features(inner_proc))"
    ]
   }
  ],
@@ -149,15 +217,7 @@
    "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
    "version": "3.13.2"
   }
  },
